# intelligent_chat

./: .env.example  .gitignore  .mcp.json  BACKLOG.md  CLAUDE.md  LICENSE  README.md  conventions.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 13a66492027a_add_resolution_note_and_relationship_.py  235ea84e7586_add_project_visibility_and_membership_.py  7927f8912988_initial_schema.py  9c59b3abe0e2_add_audit_log.py  bec77cd80b25_add_user_password_hash.py  f3a2b1c0d9e8_add_concept_embedding.py
docs/: WIKI.md
intelligent_chat/: config.py
intelligent_chat/api/: app.py  auth.py  deps.py  schemas.py
intelligent_chat/api/routers/: auth.py  concepts.py  workspaces.py
intelligent_chat/cli/: export.py  governance.py  ingest.py  main.py  search.py
intelligent_chat/embeddings/: service.py
intelligent_chat/export/: graph.py  okf.py
intelligent_chat/governance/: checks.py  lint.py  service.py
intelligent_chat/graph/: builder.py  export.py
intelligent_chat/ingestion/: archive.py  claude_code.py  copilot.py  service.py
intelligent_chat/mcp/: server.py
intelligent_chat/normalization/: llm_client.py  pipeline.py  prompts.py
intelligent_chat/search/: service.py
intelligent_chat/storage/: database.py  models.py
memories/session/: architecture-spec.md  implementation-plan.md  product-spec.md
tests/: test_api.py  test_app.py  test_governance.py  test_ingestion.py  test_mcp.py  test_search_export.py  test_semantic.py
tests/fixtures/: sample_copilot.md  sample_session.jsonl
