[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelligent-chat"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
]

[project.scripts]
ichat = "intelligent_chat.cli.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv311", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
